--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,38 @@
 
 
 :root {
+  /* Fonts */
   /* font-family: 'Inter', sans-serif; */
   --ff-primary: 'Inter', sans-serif;
+  /* Font Sizes */
+  --fs-300: 0.875rem;
+  --fs-400: 0.9375rem;
+  --fs-500: 1.125rem;
+  --fs-600: 1.25rem;
+  --fs-650: 2rem;
+  --fs-700: 2.5rem;
 
+  /* Font Weights */
   --fw-regular: 400;
   --fw-bold: 700;
   --fw-black: 800;
+
+  /* Colors - Primary */
+  --clr-soft-orange: hsla(35, 78%, 62%, 1);
+  --clr-soft-red: hsla(5, 85%, 63%, 1);
+  /* Colors - Neutral */
+  --clr-white: hsla(36, 100%, 99%, 1);
+  --clr-silver: hsla(236, 8%, 79%, 1);
+  --clr-gunmetal: hsla(236, 13%, 42%, 1);
+  --clr-dark-space-blue: hsla(240, 100%, 5%, 1);
+}
+
+@media (min-width: 600px) {
+  :root {
+
+    --fs-650: 2.5rem;
+    --fs-700: 3.5rem;
+  }
 }
 
 /* RESET */
@@ -57,6 +83,13 @@ p, h1, h2, h3, h4, h5, h6 {
 /* BASE STYLES */
 body {
   font-family: var(--ff-primary);
+  font-size: var(--fs-400);
+  background: var(--clr-white);
+  color: var(--clr-gunmetal);
+}
+
+.container {
+  padding: 0 1rem;
 }
 
 h1 {
@@ -66,3 +99,53 @@ h1 {
 /* Components and Utility Classes */
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
+
+
+a.button {
+  color: var(--clr-white);
+  font-family: inherit;
+  font-size: var(--fs-300);
+  text-transform: uppercase;
+  letter-spacing: 2.75rem;
+}
+
+
+/* Typography */
+/* h1 element */
+.featured h1 {
+  font-size: var(--fs-700);
+  font-weight: var(--fw-black);
+  line-height: 2.5rem;
+  color: var(--clr-dark-space-blue);
+}
+
+/* h2 element */
+.new-stories h2 {
+  font-size: var(--fs-650);
+  color: var(--clr-soft-orange);
+}
+/* h3 element */
+.new-stories_list h3 {
+  font-size: var(--fs-600);
+  font-weight: var(--fw-black);
+  color: var(--clr-white);
+}
+
+/* h4 element */
+.trending-stories_list h4 {
+  font-size: var(--fs-500);
+  font-weight: var(--fw-black);
+  color: var(--clr-dark-space-blue);
+}
+
+.trending-list-number {
+  font-size: 2rem;
+  line-height: 2rem;
+  color: var(--clr-silver);
+}
+
+/* General Styles */
+
+.new-stories {
+  background: var(--clr-dark-space-blue);
+}
