--- a/css/style.css
+++ b/css/style.css
@@ -288,20 +288,24 @@ a.read-more-btn:focus {
     background: transparent;
     border: 0;
     padding: 0.25em;
+
+    z-index: 999;
+
+    width: 2.5rem;
+    aspect-ratio: 1;
+
+    background-image: url('../assets/images/icon-menu.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
   }
   
-  /* .mobile-nav-toggle[aria-exanded="true"] {
+  .mobile-nav-toggle[aria-expanded="true"] {
     background-image: url('../assets/images/icon-menu-close.svg');
-  } */
-
-  .mobile-nav-toggle .icon-close {
-    display: none;
+    width: 2rem;;
   }
+
 }
-
-
-
-
 
 /* Featured Article Section*/
 .featured-img,
@@ -407,9 +411,4 @@ a.read-more-btn:focus {
     gap: 1.875rem;
   }
 
-}
-
-
-.trending-article {
-  border: 1px solid red;
 }
