--- a/css/style.css
+++ b/css/style.css
@@ -79,8 +79,8 @@ p, h1, h2, h3, h4, h5, h6 {
 body {
   min-height: 100vh;
   padding: 0 1rem;
-  /* display: flex;
-  flex-direction: column; */
+  display: flex;
+  flex-direction: column;
 
   font-family: var(--ff-primary);
   font-size: var(--fs-400);
@@ -119,7 +119,6 @@ h1 {
   white-space: nowrap !important;
   border: 0 !important;
 }  
-
 
 /* Button Styles */
 a.button {
@@ -162,7 +161,6 @@ a.read-more-btn:focus {
 }
 
 
-
 /* Typography */
 /* h1 element */
 .featured h1 {
@@ -196,7 +194,6 @@ a.read-more-btn:focus {
 }
 
 .trending-list-number {
-  /* margin-bottom: 0.75rem; */
   font-size: 2rem;
   line-height: 2rem;
   color: var(--clr-silver);
@@ -221,7 +218,6 @@ a.read-more-btn:focus {
 }
 
 /* Navigation */
-
 .nav-wrapper {
   display: flex;
   align-items: center;
@@ -234,7 +230,6 @@ a.read-more-btn:focus {
 
 .nav-list {
   display: flex;
-  /* gap: 2.5rem; */
   gap: clamp(2.5rem, 5vw, 4rem);
 }
 
@@ -242,7 +237,6 @@ a.read-more-btn:focus {
   text-decoration: none;
   color: var(--clr-gunmetal);
   font-size: var(--fs-400);
-
 }
 
 .nav-list a:hover,
@@ -258,7 +252,6 @@ a.read-more-btn:focus {
     inset: 0 0 0 30%;
     padding: 9rem 1.5rem;
     background: var(--clr-white);
-    /* box-shadow: 0 0 0 1000vmax hsla(240, 100%, 5%, 0.5); */
   }
 
   .header[data-overlay]::before {
@@ -288,12 +281,9 @@ a.read-more-btn:focus {
     background: transparent;
     border: 0;
     padding: 0.25em;
-
     z-index: 999;
-
     width: 2.5rem;
     aspect-ratio: 1;
-
     background-image: url('../assets/images/icon-menu.svg');
     background-size: contain;
     background-repeat: no-repeat;
@@ -313,8 +303,6 @@ a.read-more-btn:focus {
   margin-bottom: 1.5rem;
 }
 
-
-
 /* New Stories Section */
 .new-stories {
   padding: 1.5rem;
@@ -332,14 +320,17 @@ a.read-more-btn:focus {
 }
 
 /* Trending Stories Section */
+.trending-stories_list {
+  height: 100%;
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(min(18rem, 100%), 1fr));
+  align-items: stretch;
+}
 
 .trending-article {
   min-height: 100%;
   gap: 1.5rem;
-}
-
-.trending-story_item:not(:last-of-type) {
-  margin-bottom: 2rem;
 }
 
 .trending-img {
@@ -348,6 +339,7 @@ a.read-more-btn:focus {
 }
 
 .trending-story_content {
+  display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 }
@@ -381,16 +373,6 @@ a.read-more-btn:focus {
     align-items: flex-start;
   }
 
-  .trending-stories_list {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-
-  .trending-story_item:not(:last-of-type) {
-    margin-bottom: 0;
-  }
 }
 
 /* Desktop Styles */
@@ -407,7 +389,6 @@ a.read-more-btn:focus {
     grid-column: span 3;
   }
   .trending-stories_list {
-    flex-direction: row;
     gap: 1.875rem;
   }
 
