--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,5 @@
-/* @font-face {
-  font-family: 'Inter';
-  font-display: swap;
-  font-weight: 400 700 800;
-  src: 
-    url('assets/fonts/Inter-VariableFont_slnt,wght.ttf') format('truetype');
-} */
-
-
 :root {
   /* Fonts */
-  /* font-family: 'Inter', sans-serif; */
   --ff-primary: 'Inter', sans-serif;
   /* Font Sizes */
   --fs-300: 0.875rem;
@@ -18,12 +8,10 @@
   --fs-600: 1.25rem;
   --fs-650: 2rem;
   --fs-700: 2.5rem;
-
   /* Font Weights */
   --fw-regular: 400;
   --fw-bold: 700;
   --fw-black: 800;
-
   /* Colors - Primary */
   --clr-soft-orange: hsla(35, 78%, 62%, 1);
   --clr-soft-red: hsla(5, 85%, 63%, 1);
@@ -36,7 +24,6 @@
 
 @media (min-width: 600px) {
   :root {
-
     --fs-650: 2.5rem;
     --fs-700: 3.5rem;
   }
@@ -73,7 +60,6 @@ p, h1, h2, h3, h4, h5, h6 {
 #root, #__next {
   isolation: isolate;
 }
-
 
 /* BASE STYLES */
 body {
@@ -166,47 +152,7 @@ a.read-more-btn:focus {
   box-shadow: 0 0 0 4px var(--clr-dark-space-blue);
 }
 
-
-/* Typography */
-/* h1 element */
-.featured h1 {
-  margin-bottom: 1rem;
-  font-size: var(--fs-700);
-  font-weight: var(--fw-black);
-  line-height: 1.1;
-  color: var(--clr-dark-space-blue);
-}
-
-/* h2 element */
-.new-stories h2 {
-  margin-bottom: 1.5rem;
-  font-size: var(--fs-650);
-  color: var(--clr-soft-orange);
-}
-/* h3 element */
-.new-stories_list h3 {
-  margin-bottom: 0.5rem;
-  font-size: var(--fs-600);
-  font-weight: var(--fw-black);
-  color: var(--clr-white);
-}
-
-/* h4 element */
-.trending-stories_list h4 {
-  margin: 0.75rem 0 0.5rem 0;
-  font-size: var(--fs-500);
-  font-weight: var(--fw-black);
-  color: var(--clr-dark-space-blue);
-}
-
-.trending-list-number {
-  font-size: 2rem;
-  line-height: 2rem;
-  color: var(--clr-silver);
-}
-
 /* General Styles */
-
 .header {
   padding-top: 1.75rem;
   padding-bottom: 2rem;
@@ -230,16 +176,6 @@ a.read-more-btn:focus {
 .article-link {
   text-decoration: none;
   color: inherit;
-}
-
-.new-story_item .article-link:hover,
-.new-story_item .article-link:active {
-  color: var(--clr-soft-orange);
-}
-
-.trending-story_content .article-link:hover,
-.trending-story_content .article-link:active {
-  color: var(--clr-soft-red);
 }
 
 .footer {
@@ -274,8 +210,8 @@ a.read-more-btn:focus {
   color: var(--clr-soft-red);
 }
 
+/* Mobile Navigation Styles */
 @media (max-width: 760px) {
-
   .primary-navigation {
     display: none;
     position: absolute;
@@ -283,28 +219,23 @@ a.read-more-btn:focus {
     padding: 9rem 1.5rem;
     background: var(--clr-white);
   }
-
   .header[data-overlay]::before {
     content: '';
     position: fixed;
     inset: 0;
     background-color: hsla(240, 100%, 5%, 0.5);
   }
-
   .nav-list {
     display: grid;
     gap: 1.5rem;
   }
-
   .nav-list a {
     color: var(--clr-dark-space-blue);
     font-size: var(--fs-500);
   }
-
   .primary-navigation[data-visible] {
     display: block;
   }
-
   .mobile-nav-toggle {
     display: block;
     cursor: pointer;
@@ -319,15 +250,21 @@ a.read-more-btn:focus {
     background-repeat: no-repeat;
     background-position: center;
   }
-  
   .mobile-nav-toggle[aria-expanded="true"] {
     background-image: url('../assets/images/icon-menu-close.svg');
     width: 2rem;;
   }
-
 }
 
-/* Featured Article Section*/
+/* Featured Section */
+.featured h1 {
+  margin-bottom: 1rem;
+  font-size: var(--fs-700);
+  font-weight: var(--fw-black);
+  line-height: 1.1;
+  color: var(--clr-dark-space-blue);
+}
+
 .featured-img,
 .featured-article_content p {
   margin-bottom: 1.5rem;
@@ -339,6 +276,19 @@ a.read-more-btn:focus {
   background: var(--clr-dark-space-blue);
 }
 
+.new-stories h2 {
+  margin-bottom: 1.5rem;
+  font-size: var(--fs-650);
+  color: var(--clr-soft-orange);
+}
+
+.new-stories_list h3 {
+  margin-bottom: 0.5rem;
+  font-size: var(--fs-600);
+  font-weight: var(--fw-black);
+  color: var(--clr-white);
+}
+
 .new-story_item:not(:last-of-type) {
   margin-bottom: 1.75rem;
   padding-bottom: 1.75rem;
@@ -347,6 +297,12 @@ a.read-more-btn:focus {
 
 .new-story_item p {
   max-width: 42ch;
+  color: var(--clr-silver);
+}
+
+.new-story_item .article-link:hover,
+.new-story_item .article-link:active {
+  color: var(--clr-soft-orange);
 }
 
 /* Trending Stories Section */
@@ -355,6 +311,19 @@ a.read-more-btn:focus {
   display: grid;
   gap: 2rem;
   grid-template-columns: repeat(auto-fit, minmax(min(18rem, 100%), 1fr));
+}
+
+.trending-stories_list h4 {
+  margin: 0.75rem 0 0.5rem 0;
+  font-size: var(--fs-500);
+  font-weight: var(--fw-black);
+  color: var(--clr-dark-space-blue);
+}
+
+.trending-list-number {
+  font-size: 2rem;
+  line-height: 2rem;
+  color: var(--clr-silver);
 }
 
 .trending-article {
@@ -377,6 +346,11 @@ a.read-more-btn:focus {
   max-width: 24ch;
 }
 
+.trending-story_content .article-link:hover,
+.trending-story_content .article-link:active {
+  color: var(--clr-soft-red);
+}
+
 /* Tablet Styles */
 @media (min-width: 700px) {
   .main {
@@ -385,7 +359,6 @@ a.read-more-btn:focus {
   .featured {
     grid-column: span 2;
   }
-
   .featured-article {
     grid-template-columns: 1fr 1fr;
     gap: 0.75em;
@@ -402,7 +375,6 @@ a.read-more-btn:focus {
     justify-content: space-between;
     align-items: flex-start;
   }
-
 }
 
 /* Desktop Styles */
@@ -421,5 +393,4 @@ a.read-more-btn:focus {
   .trending-stories_list {
     gap: 1.875rem;
   }
-
 }
